Fixing overflow on table.

--- a/src/table/table.css
+++ b/src/table/table.css
@@ -6,6 +6,5 @@
 
 .row {
   display: flex;
-  overflow: hidden;
   max-width: 100%;
 }
